Date	Added

02/06
	* Login server uses  login_db_userid and login_db_user_pass for 
	  queries now [Credit to Sirius] [1059: Ajarn]
	* Login server can now check clientversion in clientinfo
	  [Credit to Sirius] [1059: Ajarn]
	* Fixed txt build compile problems[1057: MouseJstr]
	* Corrected end-of-line issues in source code [1056: MouseJstr]
	* Coded new command: @MOBINFO <monster name|monster N> [Lupus]
	  the command has also 2 aliases: @monsterinfo, @mi
	  It shows all Monster stats, Element, Race and stuff
	  It shows all items with their drop chance
	  It also shows MVP bonuses (MVP EXP, MVP Drops)	

02/05
	* increased the max_files allowed in a grf [1054: MouseJstr]
	* Changed the way char deletion works for SQL [1051: Ajarn]
	  - If the email the client fails check then check if the
	    email is blank and the DB email is a@a.com (default)
	    If so, assume it was created with _M/_F, and delete it
	* SQL Login accepts _M/_F now [Credit to Sirius] [1049: Ajarn]
	* Map server now actually reads bind_ip [1048: Ajarn]
	  Side note: login reads bind_ip, but doesn't use login_ip now.
	* Made eA compile under AMD64 64-bit native [1047: MouseJstr]
        * Changed interface binding to use a bind_ip instead of using
          the login_ip, char_ip, or map_ip.  This lets you still be
          able to set your WAN IP seperate from what interface you
          wish to bind to.  Also, the default is back to binding to
          all interfaces on the machine.  [1045: MouseJstr]
        * optimizing OnTouch event name generation [Shinomori]
        * fixing Celests Sharp Shooting [Shinomori]
        * Updated Sharp Shooting AoE code, thanks to Neodis / k-Athena [celest]
          - Update: Adapt jA's path_search algorithm and removed the need of struct
            'dev' in map_session_data
          - Update: Increase range to 14
        * Tidied up explicit typecasts in status_get_max_hp, thanks to Ilpalazzo-sama
          [celest]